Added animations and actors classes

--- a/style.css
+++ b/style.css
@@ -22,3 +22,15 @@
 .wall {
     background: white;
 }
+
+.actor {
+    position: absolute;
+}
+
+.coin {
+    background: rgb(240, 230, 90);
+}
+
+.player {
+    background: rgb(70, 70, 70);
+}
